- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    Qt Creator 8.0.0-rc1
- 
    None
- 
        
- 
        d1c98e43b5 (qt-creator/qt-creator/8.0) d1c98e43b5 (qt-creator/tqtc-qt-creator/8.0) d1c98e43b5 (qt-creator/qt-creator/master) d1c98e43b5 (qt-creator/tqtc-qt-creator/master) d1c98e43b5 (qt-creator/qt-creator/qds-3.6) d1c98e43b5 (qt-creator/qt-creator/9.0)
To reproduce: Select some lines so that the start of selection is not if first column (e.g. column 10) and selection spans some gray lines. During selecting there are many printouts like:
QTextCursor::setPosition: Position '49' out of range QTextCursor::setPosition: Position '49' out of range