TextEditorWidget: Fix createMimeDataFromSelection()

When omitting separator lines take the selection start
position instead of the position of the block where
selection starts.

Amends c98bd449523dc05f8875e96d06cf7c21e18eef0d

Fixes: QTCREATORBUG-27813
Change-Id: I6067a3ef6396d50162d8e253fe4a825d47d326b9
Reviewed-by: Eike Ziller <eike.ziller@qt.io>